--- a/MiniProyecto/MiniProyecto/MiniProyecto.csproj
+++ b/MiniProyecto/MiniProyecto/MiniProyecto.csproj
@@ -117,6 +117,12 @@
     <Compile Include="InfoUsuario.Designer.cs">
       <DependentUpon>InfoUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="interfaz.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="interfaz.Designer.cs">
+      <DependentUpon>interfaz.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -139,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="InfoUsuario.resx">
       <DependentUpon>InfoUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="interfaz.resx">
+      <DependentUpon>interfaz.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -172,6 +181,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\User.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\login.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\login-user-1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Gemini_Generated_Image_mvgi00mvgi00mvgi.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
